--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    pull_request:
+      branches:
+        - main
 
 jobs:
   test:
@@ -15,10 +18,10 @@ jobs:
       - name: Configurar PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.1"
+          php-version: '8.3.6'
 
       - name: Instalar dependencias
-        run: composer install --no-interaction --prefer-dist
+        run: composer install --no-interaction --no-progress --no-suggest --prefer-dist
 
       - name: Ejecutar pruebas con PHPUnit
         run: vendor/bin/phpunit
@@ -31,5 +34,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Notificar a Ferozo para desplegar
-  	run: |
-         curl -X POST https://ferozo.host/deploy/git/54c45b4f8f281928b7efc0eb81a7926a
+        run: |
+          curl -X POST https://ferozo.host/deploy/git/54c45b4f8f281928b7efc0eb81a7926a
