--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,5 +34,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Notificar a Ferozo para desplegar
-        run: |
-          curl -X POST https://ferozo.host/deploy/git/54c45b4f8f281928b7efc0eb81a7926a
+        run:  curl -X POST https://ferozo.host/deploy/git/54c45b4f8f281928b7efc0eb81a7926a
